[gd_scene load_steps=11 format=2]

[ext_resource path="res://SirenaTheme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/NotoFont_Dynamic.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/NotoFont_Data.tres" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/ApplyAttribs.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )
RichTextLabel/fonts/normal_font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 256
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Tile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -132.0
margin_bottom = -831.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource( 1 )

[node name="Backslate" type="Panel" parent="."]
margin_right = 448.0
margin_bottom = 175.0
rect_scale = Vector2( 0.75, 0.75 )
mouse_filter = 1
size_flags_horizontal = 8
size_flags_vertical = 8
theme = SubResource( 2 )
script = ExtResource( 4 )

[node name="Name" type="Label" parent="Backslate"]
margin_left = 80.0
margin_top = -2.66667
margin_right = 1626.0
margin_bottom = 347.333
rect_scale = Vector2( 0.165, 0.165 )
mouse_filter = 1
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "<itemname>"
valign = 1

[node name="Links" type="RichTextLabel" parent="Backslate"]
margin_left = 81.0
margin_top = 53.3333
margin_right = 7121.0
margin_bottom = 373.333
rect_scale = Vector2( 0.05, 0.05 )
mouse_filter = 1
theme = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[i]Something, Something, Something...[/i]"
text = "Something, Something, Something..."
scroll_active = false

[node name="Description" type="RichTextLabel" parent="Backslate"]
margin_left = 81.0
margin_top = 74.3333
margin_right = 6961.0
margin_bottom = 2154.33
rect_scale = Vector2( 0.05, 0.05 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "This is placeholder text for an extended description for the item in question. Originally, this was intended for the expanding tile, however, it was deemed to hard to implement, and I was short a screen. This made it the obvoius choice to create a new screen to alieviate this."
scroll_active = false

[node name="Thumbnail" type="TextureRect" parent="Backslate"]
margin_left = 12.0
margin_top = 11.0
margin_right = 76.0
margin_bottom = 75.0
expand = true
stretch_mode = 5

[node name="Button" type="Button" parent="."]
margin_right = 334.0
margin_bottom = 129.0
mouse_filter = 1
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 4 )

[connection signal="pressed" from="Button" to="Backslate" method="_on_Button_pressed"]
